<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="name">Udacity</string>
    <string name="addressline1">2465 Latham St</string>
    <string name="addressline2">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="quote">“Ever tried. Ever failed. No matter.\nTry again. Fail again. Fail better.”</string>
    <string name="author"> --Samuel Beckett</string>
</resources>
