<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/blackboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="4"
        android:scaleY="4"
        android:src="@drawable/blackboard" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@color/colorBlack" />

    <View
        android:id="@+id/udacitybox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0.7"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:alpha="0.7"
        android:background="@color/colorYellowish"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        android:paddingVertical="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"


            android:layout_weight="2"
            android:fontFamily="monospace"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"

            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/addressline1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/addressline2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:fontFamily="monospace"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:scaleX="0.35"
        android:scaleY="0.35"
        android:src="@drawable/udacitylogo" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:alpha="0.75"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="20dp"
        android:text="@string/quote"
        android:textColor="@color/colorYellowish"
        android:textSize="21sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/quote"
        android:layout_below="@id/quote"
        android:layout_marginLeft="30dp"
        android:alpha="0.9"
        android:fontFamily="monospace"
        android:text="@string/author"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        android:textStyle="bold" />
</RelativeLayout>